# SWESolver

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  config.cfg
doc/html/: Config_8cpp__incl.map  Config_8cpp__incl.md5  Config_8cppxhtml  Config_8h__dep__incl.map  Config_8h__dep__incl.md5  Config_8h__incl.map  Config_8h__incl.md5  Config_8h_sourcexhtml  Config_8hxhtml  Config_8inl.js  Config_8inl__dep__incl.map  Config_8inl__dep__incl.md5  Config_8inl__incl.map  Config_8inl__incl.md5  Config_8inlxhtml  Enums_8h.js  Enums_8h__dep__incl.map  Enums_8h__dep__incl.md5  Enums_8h__incl.map  Enums_8h__incl.md5  Enums_8h_sourcexhtml  Enums_8hxhtml  Grid_8cpp__incl.map  Grid_8cpp__incl.md5  Grid_8cppxhtml  Grid_8h__dep__incl.map  Grid_8h__dep__incl.md5  Grid_8h__incl.map  Grid_8h__incl.md5  Grid_8h_sourcexhtml  Grid_8hxhtml  ModelEquations_8cpp__incl.map  ModelEquations_8cpp__incl.md5  ModelEquations_8cppxhtml  ModelEquations_8h.js  ModelEquations_8h__dep__incl.map  ModelEquations_8h__dep__incl.md5  ModelEquations_8h__incl.map  ModelEquations_8h__incl.md5  ModelEquations_8h_sourcexhtml  (+229 more)
doc/latex/: Config_8cpp.tex  Config_8cpp__incl.md5  Config_8h.tex  Config_8h__dep__incl.md5  Config_8h__incl.md5  Config_8inl.tex  Config_8inl__dep__incl.md5  Config_8inl__incl.md5  Enums_8h.tex  Enums_8h__dep__incl.md5  Enums_8h__incl.md5  Grid_8cpp.tex  Grid_8cpp__incl.md5  Grid_8h.tex  Grid_8h__dep__incl.md5  Grid_8h__incl.md5  ModelEquations_8cpp.tex  ModelEquations_8cpp__incl.md5  ModelEquations_8h.tex  ModelEquations_8h__dep__incl.md5  ModelEquations_8h__incl.md5  NumericalFluxes_8cpp.tex  NumericalFluxes_8cpp__incl.md5  NumericalFluxes_8h.tex  NumericalFluxes_8h__dep__incl.md5  NumericalFluxes_8h__incl.md5  OutputManager_8cpp.tex  OutputManager_8cpp__incl.md5  OutputManager_8h.tex  OutputManager_8h__dep__incl.md5  OutputManager_8h__incl.md5  Solution_8cpp.tex  Solution_8cpp__incl.md5  Solution_8h.tex  (+80 more)
include/: Config.h  Config.inl  Enums.h  Grid.h  ModelEquations.h  NumericalFluxes.h  OutputManager.h  Solution.h  Solver.h  Utils.h
src/: Config.cpp  Grid.cpp  ModelEquations.cpp  NumericalFluxes.cpp  OutputManager.cpp  Solution.cpp  Solver.cpp  Utils.cpp  main.cpp
testCase/: README.md
(+2869 files in other folders)
